[project]
name = "cadquery-server"
version = "0.4.1"
description = "A web server used to render 3d models from CadQuery code, and eventually build a static website as a showcase for your projects."
authors = [{ name = "Roipoussiere" }]
requires-python = "==3.10"
readme = "./README.md"
license = "MIT"
keywords = [
    "cad",
    "cadquery",
    "3d",
    "parametric",
    "modeling",
]
classifiers = [
    "Framework :: Flask",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "Flask>3",
    "jupyter-cadquery==4.0.2",
    "cadquery-massembly>=0.9.0,<0.10",
    "matplotlib>=3.5.3,<4",
    "minify-html>=0.10.0,<0.11",
    "CairoSVG>=2.5.2,<3",
]

[project.optional-dependencies]
cadquery = [
    "cadquery==2.2.0b0",
    "casadi>=3.5.6rc2,<4",
]

[project.urls]
Homepage = "https://github.com/roipoussiere/cadquery-server"
Repository = "https://github.com/roipoussiere/cadquery-server"

[project.scripts]
cq-server = "cq_server.cli:main"

[dependency-groups]
dev = [
    "pylint>=2.15.0,<3",
    "PyAutoGUI>=0.9.53,<0.10",
    "paperclip>=2.6.1,<3",
]

[tool.hatch.build.targets.sdist]
include = ["cq_server"]

[tool.hatch.build.targets.wheel]
include = ["cq_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
